--- a/index.html
+++ b/index.html
@@ -1,85 +1,113 @@
-import React, { useState } from "react";
-import { Card, CardContent } from "@/components/ui/card";
-import { Button } from "@/components/ui/button";
-import { Input } from "@/components/ui/input";
-import { Textarea } from "@/components/ui/textarea";
+<!DOCTYPE html>
+<html lang="id">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>JodohKita – Platform Pencari Jodoh Serius</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+  <style>
+    * { box-sizing: border-box; }
+    body { margin: 0; font-family: 'Poppins', sans-serif; background: #f4f6f8; color: #333; }
 
-export default function SahabatJodohApp() {
-  const [user, setUser] = useState(null);
-  const [filter, setFilter] = useState({ usia: "", domisili: "", tujuan: "" });
+    header { background: linear-gradient(135deg, #ff5a7a, #ff8fa3); color: #fff; padding: 70px 20px; text-align: center; }
+    header h1 { font-size: 42px; margin-bottom: 10px; }
+    header p { font-size: 18px; opacity: 0.95; }
+    header button { margin-top: 25px; padding: 14px 30px; font-size: 16px; border-radius: 30px; border: none; background: #fff; color: #ff5a7a; cursor: pointer; font-weight: 600; }
 
-  if (!user) {
-    return (
-      <div className="min-h-screen flex items-center justify-center bg-gray-50 p-6">
-        <Card className="w-full max-w-md rounded-2xl">
-          <CardContent className="p-6 space-y-4">
-            <h1 className="text-2xl font-bold text-center">🔐 Login Anggota</h1>
-            <Input placeholder="Email / Username" />
-            <Input type="password" placeholder="Password" />
-            <Button className="w-full" onClick={() => setUser({ name: "Anggota" })}>Login</Button>
-            <p className="text-sm text-center text-gray-500">Belum punya akun? Daftar melalui admin.</p>
-          </CardContent>
-        </Card>
-      </div>
-    );
-  }
+    nav { background: #fff; padding: 15px 40px; display: flex; justify-content: space-between; align-items: center; box-shadow: 0 2px 10px rgba(0,0,0,0.08); position: sticky; top: 0; z-index: 10; }
+    nav .logo { font-weight: 600; color: #ff5a7a; font-size: 20px; }
+    nav a { margin-left: 25px; text-decoration: none; color: #333; font-weight: 500; }
 
-  return (
-    <div className="min-h-screen bg-gray-50 p-6 space-y-6">
-      <h1 className="text-3xl font-bold">💖 Sahabat Jodoh</h1>
+    section { padding: 70px 20px; max-width: 1200px; margin: auto; }
+    section h2 { text-align: center; margin-bottom: 50px; font-size: 32px; }
 
-      {/* Profil Anggota */}
-      <Card className="rounded-2xl">
-        <CardContent className="p-4 space-y-2">
-          <h2 className="text-xl font-semibold">👤 Profil Saya</h2>
-          <Input placeholder="Nama Lengkap" />
-          <Input placeholder="Usia" type="number" />
-          <Input placeholder="Domisili" />
-          <Input placeholder="Tujuan (Ta'aruf / Nikah)" />
-          <Textarea placeholder="Deskripsi Singkat" />
-          <Button>Simpan Profil</Button>
-        </CardContent>
-      </Card>
+    .features { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 30px; }
+    .feature { background: #fff; padding: 30px; border-radius: 16px; box-shadow: 0 10px 25px rgba(0,0,0,0.08); text-align: center; }
+    .feature h3 { margin-bottom: 10px; color: #ff5a7a; }
 
-      {/* Filter & Matching */}
-      <Card className="rounded-2xl">
-        <CardContent className="p-4 space-y-3">
-          <h2 className="text-xl font-semibold">❤️ Cari & Cocokkan Jodoh</h2>
-          <div className="grid md:grid-cols-3 gap-2">
-            <Input placeholder="Usia" onChange={(e) => setFilter({ ...filter, usia: e.target.value })} />
-            <Input placeholder="Domisili" onChange={(e) => setFilter({ ...filter, domisili: e.target.value })} />
-            <Input placeholder="Tujuan Nikah" onChange={(e) => setFilter({ ...filter, tujuan: e.target.value })} />
-          </div>
-          <Button>Cari Kandidat</Button>
-          <p className="text-sm text-gray-500">Sistem akan menampilkan anggota dengan kriteria serupa.</p>
-        </CardContent>
-      </Card>
+    .profiles { display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 30px; }
+    .profile { background: #fff; border-radius: 16px; overflow: hidden; box-shadow: 0 10px 25px rgba(0,0,0,0.08); }
+    .profile img { width: 100%; height: 220px; object-fit: cover; }
+    .profile .info { padding: 20px; }
+    .profile button { width: 100%; margin-top: 15px; padding: 12px; border-radius: 25px; border: none; background: #ff5a7a; color: #fff; font-weight: 600; cursor: pointer; }
 
-      {/* Grup Chat / Forum */}
-      <Card className="rounded-2xl">
-        <CardContent className="p-4 space-y-2">
-          <h2 className="text-xl font-semibold">💬 Forum Diskusi</h2>
-          <Textarea placeholder="Tulis pesan atau diskusi sopan di sini..." />
-          <Button>Kirim</Button>
-          <p className="text-sm text-gray-500">Forum diawasi admin, jaga adab & etika.</p>
-        </CardContent>
-      </Card>
+    .cta { background: linear-gradient(135deg, #ff5a7a, #ff8fa3); color: #fff; text-align: center; padding: 70px 20px; border-radius: 20px; }
+    .cta h2 { margin-bottom: 15px; }
+    .cta button { margin-top: 20px; padding: 14px 35px; font-size: 16px; border-radius: 30px; border: none; background: #fff; color: #ff5a7a; font-weight: 600; cursor: pointer; }
 
-      {/* Keamanan */}
-      <Card className="rounded-2xl border border-red-200">
-        <CardContent className="p-4 space-y-2">
-          <h2 className="text-xl font-semibold">🛡️ Keamanan & Laporan</h2>
-          <p className="text-sm text-gray-600">Laporkan akun yang tidak sopan atau mencurigakan.</p>
-          <Input placeholder="Nama / ID Akun" />
-          <Textarea placeholder="Alasan laporan" />
-          <Button variant="destructive">Laporkan ke Admin</Button>
-        </CardContent>
-      </Card>
+    footer { background: #222; color: #aaa; text-align: center; padding: 30px 20px; margin-top: 80px; }
+  </style>
+</head>
+<body>
 
-      <footer className="text-sm text-gray-500 text-center pt-6">
-        © 2026 Sahabat Jodoh · Sistem komunitas pencari jodoh terpercaya
-      </footer>
+<nav>
+  <div class="logo">JodohKita</div>
+  <div>
+    <a href="#fitur">Fitur</a>
+    <a href="#anggota">Anggota</a>
+    <a href="#daftar">Daftar</a>
+    <a href="#kontak">Kontak</a>
+  </div>
+</nav>
+
+<header>
+  <h1>Temukan Pasangan Hidup yang Tepat</h1>
+  <p>Platform pencari jodoh online yang aman, profesional, dan berorientasi pada hubungan serius.</p>
+  <button>Mulai Sekarang</button>
+</header>
+
+<section id="fitur">
+  <h2>Kenapa Memilih JodohKita?</h2>
+  <div class="features">
+    <div class="feature">
+      <h3>Verifikasi Profil</h3>
+      <p>Setiap anggota diverifikasi untuk menjaga keamanan dan keaslian data.</p>
     </div>
-  );
-}
-            
+    <div class="feature">
+      <h3>Privasi Terjaga</h3>
+      <p>Data pribadi Anda dilindungi dengan sistem keamanan berlapis.</p>
+    </div>
+    <div class="feature">
+      <h3>Fokus Serius</h3>
+      <p>Bukan sekadar dating, tapi membangun hubungan menuju pernikahan.</p>
+    </div>
+  </div>
+</section>
+
+<section id="anggota">
+  <h2>Anggota Pilihan</h2>
+  <div class="profiles">
+    <div class="profile">
+      <img src="https://via.placeholder.com/400x300" alt="Profil">
+      <div class="info">
+        <h3>Aisyah, 25</h3>
+        <p>Guru • Jakarta</p>
+        <button>Hubungi</button>
+      </div>
+    </div>
+    <div class="profile">
+      <img src="https://via.placeholder.com/400x300" alt="Profil">
+      <div class="info">
+        <h3>Ahmad, 28</h3>
+        <p>Software Engineer • Bandung</p>
+        <button>Hubungi</button>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section id="daftar">
+  <div class="cta">
+    <h2>Siap Menemukan Jodoh?</h2>
+    <p>Daftarkan diri Anda sekarang dan mulai perjalanan menuju hubungan yang lebih serius.</p>
+    <button>Daftar Gratis</button>
+  </div>
+</section>
+
+<footer id="kontak">
+  <p>© 2026 JodohKita. All Rights Reserved.</p>
+  <p>Email: admin@jodohkita.com</p>
+</footer>
+
+</body>
+</html>
